# claudeboost

./: .gitignore  CLAUDE.md  ROADMAP.md  claudeboost-architecture.html  claudeboost-debug.html  generate_pdf.py  tailwind.config.ts
.claude/: CLAUDE.md  settings.json
.claude/docs/: README.md  build_spec.md  claude_code_best_practices.md  metrics_roi_tracking.md  model_selection.md  prompt_playbook.md  prompt_scoring_rubric.md  workflow.md
.github/workflows/: test.yml
.playwright-mcp/: page-2026-04-02T11-25-36-583Z.yml
mcp-server/: README.md  classifier.py  db.py  enhancer.py  feedback.py  pyproject.toml  scorer.py  server.py
mcp-server/claudeboost_mcp/: __init__.py  __main__.py  audit.py  auth.py  classifier.py  cli_login.py  config.py  db.py  enhancer.py  feedback.py  rate_limiter.py  server.py  setup.py  version_check.py
mcp-server/tests/: test_classifier.py  test_enhancer.py  test_feedback.py  test_offline_queue.py  test_rate_limiter.py  test_retry_logic.py  test_scorer.py
src/: App.tsx  index.css
src/components/: DomainBadge.tsx  HistoryCard.tsx  Navbar.tsx  StarRating.tsx
src/lib/: data.ts
src/pages/: ConstraintsPage.tsx  HistoryPage.tsx  StatsPage.tsx
web-dashboard/: README.md  middleware.ts  package-lock.json  package.json  playwright.config.ts  supabase-fix-rls.sql  supabase-schema-v2.sql  supabase-schema-v3.sql  supabase-schema-v4.sql  supabase-schema.sql  tailwind.config.ts
web-dashboard/app/: globals.css  layout.tsx  page.tsx
web-dashboard/components/: AnimatedNumber.tsx  BoostConstellation.tsx  DomainBadge.tsx  FeedbackForm.tsx  (+6 more)
(+73 files in other folders)
