[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudeboost-mcp"
version = "0.5.0"
description = "MCP server that enhances prompts for Claude Code using enterprise playbook rules"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "ClaudeBoost", email = "hello@claudeboost.com" },
]
keywords = ["claude", "mcp", "prompt-engineering", "claude-code", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
    "anthropic>=0.30.0",
]

[project.urls]
Homepage = "https://claudeboost.com"
Repository = "https://github.com/FarhadS08/claudeboost"
Documentation = "https://github.com/FarhadS08/claudeboost#readme"

[project.scripts]
claudeboost-mcp = "claudeboost_mcp.__main__:run"

[tool.hatch.build.targets.wheel]
packages = ["claudeboost_mcp"]
